# test-task

./: Makefile  README.md  pyproject.toml
deploy/: compose.yaml
deploy/task/: Dockerfile
src/: main.py
src/database/: database.py  init_db.py  models.py
src/routers/v1/: router.py
src/routers/v1/contacts/: router.py  schemas.py
src/routers/v1/leads/: router.py  schemas.py
src/routers/v1/operators/: router.py  schemas.py
src/routers/v1/sources/: router.py  schemas.py
src/routers/v1/stats/: router.py  schemas.py
src/utils/: operators_autoallocate.py
