[tool.poetry]
name = "test-task"
version = "0.1.0"
description = "test task"
authors = ["semen-bol <syoma.bolotov@bk.ru>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "^0.122.0"
uvicorn = "^0.38.0"
sqlalchemy = "^2.0.44"
aiosqlite = "^0.21.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
